--- a/index.html
+++ b/index.html
@@ -1966,7 +1966,7 @@
 
     // 支持的视频格式列表 (用于文件扩展名检查)
     const supportedFormats = [
-      'mp4', 'm3u8', 'flv', 'webm', 'mkv', 'mov', '3gp', 'ogg', 'mpg', 'mpeg', 'vob', 'ts', 'avi', 'wmv' // Added avi, wmv
+      'mp4', 'm3u8', 'flv', 'webm', 'mkv', 'mov', 'avi', 'wmv', '3gp', 'ogg', 'mpg', 'mpeg', 'vob', 'ts',
     ];
 
     // 字幕设置的默认值
@@ -2784,7 +2784,8 @@
      * 设置播放器事件监听。
      */
     function setupPlayerEvents() {
-        // 这些事件监听器绑定到 nativeVideoPlayer，当 xgplayer 活跃时，其自身的事件会更新 UI
+        // 这些事件监听器绑定到 nativeVideoPlayer 的 timeupdate 事件，
+        // 当 xgplayer 活跃时，其自身的 timeupdate 事件会更新 UI
         nativeVideoPlayer.addEventListener('timeupdate', function () {
             // 只有当不处于拖动或键盘快进/快退预览状态时，才更新UI
             if (currentPlayingMethod !== 'xgplayer' && !isSeeking && !isKeyboardSeeking) {
@@ -2883,7 +2884,7 @@
         }
         // 根据播放器当前状态更新状态指示器
         if (activePlayer.paused) {
-            updateStatus('loading', '正在缓冲...'); // 拖动后暂停，显示缓冲
+            updateStatus('stopped', '播放已暂停'); // 拖动后暂停，显示暂停状态
         } else {
             updateStatus('playing', `正在播放 (${activePlayer.playbackRate}x)`);
         }
@@ -3056,7 +3057,9 @@
                 inVideoVolumeIcon.className = 'fas fa-volume-off';
             } else if (volume < 0.5) {
                 inVideoVolumeIcon.className = 'fas fa-volume-down';
+                inVideoVolumeIcon.className = 'fas fa-volume-down';
             } else {
+                inVideoVolumeIcon.className = 'fas fa-volume-up';
                 inVideoVolumeIcon.className = 'fas fa-volume-up';
             }
             updateMuteButtonIcon(); // 确保静音按钮图标也同步
@@ -3472,7 +3475,7 @@
         xgplayerContainerElement.style.display = 'none'; // 隐藏 xgplayer 容器
         activePlayer = nativeVideoPlayer; // 设置活跃播放器为原生
 
-        // 销毁之前的 HLS/FLV.js 实例
+        // 销毁之前的 HLS.js 和 FLV.js 实例
         if (hlsInstance) {
             hlsInstance.destroy();
             hlsInstance = null;
@@ -3495,13 +3498,22 @@
             if (Hls.isSupported()) {
                 // HLS.js 配置优化
                 const hlsConfig = {
-                    maxBufferLength: 60, // Max buffer length in seconds (default 30s)
-                    maxMaxBufferLength: 90, // Max buffer length the buffer can grow to (default 60s)
-                    startFragPrefetch: true, // Enable prefetching of fragments
-                    // enableWorker: true, // Keep web worker enabled for performance (default true)
-                    // forceKeyFrameOnDiscontinuity: true, // Might help with stream discontinuities
+                    // 启用片段预取以改善启动和寻道时间
+                    startFragPrefetch: true,
+                    // 尝试预缓冲的最大长度（秒），默认30秒。
+                    // 增加此值可能有助于提前缓冲更多数据。
+                    maxBufferLength: 60, // 尝试缓冲最多60秒
+                    // 允许的最大缓冲长度（秒），默认600秒。
+                    // 这是HLS.js将尝试填充的绝对最大值。
+                    maxMaxBufferLength: 120, // 允许最多120秒的缓冲
+                    // 播放开始/恢复前的最小缓冲长度（秒），默认10秒。
+                    // 如果缓冲低于此值，播放将暂停。
+                    minBufferLength: 15, // 确保在开始/恢复前至少有15秒的缓冲
+                    // fragLoadingMaxRetry: 6, // 片段加载最大重试次数，默认6
+                    // fragLoadingRetryDelay: 500, // 片段加载重试延迟，默认500ms
+                    // fragLoadingMaxRetryTimeout: 15000, // 片段加载最大重试超时，默认15000ms
                 };
-                hlsInstance = new Hls(hlsConfig);
+                hlsInstance = new Hls(hlsConfig); // 使用优化后的配置
                 hlsInstance.loadSource(url);
                 hlsInstance.attachMedia(nativeVideoPlayer);
                 hlsInstance.on(Hls.Events.MANIFEST_PARSED, function () {
@@ -3513,33 +3525,39 @@
                         videoContainerElement.classList.remove('visible');
                     });
                 });
-                // 增强 HLS.js 错误处理
                 hlsInstance.on(Hls.Events.ERROR, function (event, data) {
                     console.error('HLS错误:', data);
-                    let errorMessage = `HLS错误: ${data.details}`;
+                    let errorMessage = 'HLS错误: ' + data.details;
+                    let statusType = 'loading'; // 默认非致命错误为黄色
+
                     if (data.fatal) {
                         errorMessage += ' (致命错误)';
-                        switch (data.type) {
-                            case Hls.ErrorTypes.NETWORK_ERROR:
-                                console.warn('HLS致命网络错误，尝试恢复...');
-                                hlsInstance.startLoad(); // 尝试重新加载
-                                break;
-                            case Hls.ErrorTypes.MEDIA_ERROR:
-                                console.warn('HLS致命媒体错误，尝试恢复...');
-                                hlsInstance.recoverMediaError(); // 尝试恢复媒体错误
-                                break;
-                            default:
-                                updateStatus('stopped', errorMessage);
-                                uploadPlaceholder.classList.remove('hidden');
-                                videoContainerElement.classList.remove('visible');
-                                if (hlsInstance) {
-                                    hlsInstance.destroy();
-                                    hlsInstance = null;
-                                }
-                                return; // 对于其他致命错误，停止并销毁
+                        statusType = 'stopped'; // 致命错误为红色
+                        if (data.type === Hls.ErrorTypes.NETWORK_ERROR) {
+                            errorMessage += '。请检查网络连接或稍后重试。';
+                        } else if (data.type === Hls.ErrorTypes.MEDIA_ERROR) {
+                            errorMessage += '。视频流可能已损坏或不受支持。';
                         }
                     }
-                    updateStatus('stopped', errorMessage); // 更新状态
+
+                    // 明确指定 BUFFER_STALLED_ERROR 为红色，无论是否致命
+                    if (data.details === Hls.ErrorDetails.BUFFER_STALLED_ERROR) {
+                        errorMessage = 'HLS错误: bufferStalledError';
+                        statusType = 'stopped'; // 强制为红色
+                    }
+
+                    updateStatus(statusType, errorMessage);
+
+                    if (data.fatal) {
+                        // 对于致命错误，销毁实例并尝试恢复或提示用户
+                        // 致命错误时必须销毁HLS实例
+                        if (hlsInstance) {
+                            hlsInstance.destroy();
+                            hlsInstance = null;
+                        }
+                        uploadPlaceholder.classList.remove('hidden');
+                        videoContainerElement.classList.remove('visible');
+                    }
                 });
             } else if (nativeVideoPlayer.canPlayType('application/vnd.apple.mpegurl')) {
                 nativeVideoPlayer.src = url;
@@ -3568,10 +3586,11 @@
                 // 如果原生播放失败，尝试使用 HLS 回退 (例如，对于一些 TS 流)
                 if (Hls.isSupported()) {
                     updateStatus('loading', '尝试使用HLS播放...');
-                    const hlsConfig = { // 同样应用 HLS.js 配置
-                        maxBufferLength: 60,
-                        maxMaxBufferLength: 90,
+                    const hlsConfig = {
                         startFragPrefetch: true,
+                        maxBufferLength: 60,
+                        maxMaxBufferLength: 120,
+                        minBufferLength: 15,
                     };
                     hlsInstance = new Hls(hlsConfig);
                     hlsInstance.loadSource(url);
@@ -3585,32 +3604,37 @@
                             videoContainerElement.classList.remove('visible');
                         });
                     });
-                    hlsInstance.on(Hls.Events.ERROR, function (event, data) { // 同样增强错误处理
+                    hlsInstance.on(Hls.Events.ERROR, function (event, data) {
                         console.error('HLS回退错误:', data);
-                        let errorMessage = `HLS回退错误: ${data.details}`;
+                        let errorMessage = 'HLS回退错误: ' + data.details;
+                        let statusType = 'loading'; // 默认非致命错误为黄色
+
                         if (data.fatal) {
                             errorMessage += ' (致命错误)';
-                            switch (data.type) {
-                                case Hls.ErrorTypes.NETWORK_ERROR:
-                                    console.warn('HLS回退致命网络错误，尝试恢复...');
-                                    hlsInstance.startLoad();
-                                    break;
-                                case Hls.ErrorTypes.MEDIA_ERROR:
-                                    console.warn('HLS回退致命媒体错误，尝试恢复...');
-                                    hlsInstance.recoverMediaError();
-                                    break;
-                                default:
-                                    updateStatus('stopped', errorMessage);
-                                    uploadPlaceholder.classList.remove('hidden');
-                                    videoContainerElement.classList.remove('visible');
-                                    if (hlsInstance) {
-                                        hlsInstance.destroy();
-                                        hlsInstance = null;
-                                    }
-                                    return;
+                            statusType = 'stopped'; // 致命错误为红色
+                            if (data.type === Hls.ErrorTypes.NETWORK_ERROR) {
+                                errorMessage += '。请检查网络连接或稍后重试。';
+                            } else if (data.type === Hls.ErrorTypes.MEDIA_ERROR) {
+                                errorMessage += '。视频流可能已损坏或不受支持。';
                             }
                         }
-                        updateStatus('stopped', errorMessage);
+
+                        // 明确指定 BUFFER_STALLED_ERROR 为红色，无论是否致命
+                        if (data.details === Hls.ErrorDetails.BUFFER_STALLED_ERROR) {
+                            errorMessage = 'HLS回退错误: 视频缓冲停滞，请检查网络或尝试重新加载。';
+                            statusType = 'stopped'; // 强制为红色
+                        }
+
+                        updateStatus(statusType, errorMessage);
+
+                        if (data.fatal) {
+                            if (hlsInstance) {
+                                hlsInstance.destroy();
+                                hlsInstance = null;
+                            }
+                            uploadPlaceholder.classList.remove('hidden');
+                            videoContainerElement.classList.remove('visible');
+                        }
                     });
                 } else {
                     updateStatus('stopped', '播放失败，浏览器不支持此格式。');
@@ -3953,7 +3977,7 @@
      * Function to determine if a URL is likely a valid video URL.
      */
     function isValidVideoUrl(url) {
-      const videoExtensions = ['mp4', 'm3u8', 'flv', 'webm', 'mkv', 'mov', '3gp', 'ogg', 'mpg', 'mpeg', 'vob', 'ts', 'avi', 'wmv']; // Added avi, wmv
+      const videoExtensions = ['mp4', 'm3u8', 'flv', 'webm', 'mkv', 'mov', 'avi', 'wmv', '3gp', 'ogg', 'mpg', 'mpeg', 'vob', 'ts',];
       const extension = getFileExtension(url);
 
       if (url.startsWith('blob:')) {
@@ -4463,6 +4487,16 @@
         });
     }
 
+    // --- 新增：字节格式化辅助函数 ---
+    function formatBytes(bytes, decimals = 2) {
+        if (bytes === 0) return '0 Bytes';
+        const k = 1024;
+        const dm = decimals < 0 ? 0 : decimals;
+        const sizes = ['Bytes', 'KB', 'MB', 'GB', 'TB'];
+        const i = Math.floor(Math.log(bytes) / Math.log(k));
+        return parseFloat((bytes / Math.pow(k, i)).toFixed(dm)) + ' ' + sizes[i];
+    }
+
     // --- 新的下载功能 (参考用户提供代码) ---
     async function downloadVideo() {
       const url = currentVideoUrl; // 获取当前播放视频的 URL
@@ -4546,7 +4580,7 @@
       const manifestText = await response.text();
 
       const segmentUrls = [];
-      const baseUrl = m3u3Url.substring(0, m3u8Url.lastIndexOf('/') + 1); // 正确计算 baseUrl
+      const baseUrl = m3u8Url.substring(0, m3u8Url.lastIndexOf('/') + 1); // 正确计算 baseUrl
 
       const lines = manifestText.split('\n'); // 将 manifest 分割成行
       for (const line of lines) {
@@ -4569,21 +4603,38 @@
         throw new Error('M3U8 manifest 中未找到视频片段。');
       }
 
-      const segmentData = [];
-      let downloadedBytes = 0;
-      let totalSegments = segmentUrls.length;
+      let downloadedSegmentsCount = 0;
+      let downloadedTotalBytes = 0;
+      const totalSegments = segmentUrls.length;
 
-      for (let i = 0; i < totalSegments; i++) {
-        const segmentUrl = segmentUrls[i];
-        updateStatus('loading', `正在下载片段 ${i + 1}/${totalSegments}...`);
-        const segmentResponse = await fetch(segmentUrl);
-        if (!segmentResponse.ok) {
-          throw new Error(`Failed to fetch segment ${i + 1}: ${segmentResponse.statusText}`);
-        }
-        const buffer = await segmentResponse.arrayBuffer();
-        segmentData.push(new Uint8Array(buffer));
-        downloadedBytes += buffer.byteLength;
-      }
+      // 创建一个 Promise 数组，用于并发下载所有片段
+      const segmentPromises = segmentUrls.map(async (segmentUrl, index) => {
+          try {
+              const segmentResponse = await fetch(segmentUrl);
+              if (!segmentResponse.ok) {
+                  throw new Error(`Failed to fetch segment ${index + 1}: ${segmentResponse.statusText}`);
+              }
+              const buffer = await segmentResponse.arrayBuffer();
+
+              // 更新进度（此部分将在每个 Promise 解析时调用）
+              downloadedSegmentsCount++; // 完成的片段数加1
+              downloadedTotalBytes += buffer.byteLength; // 累加已下载的字节数
+
+              // 实时更新下载状态
+              updateStatus('loading', `正在下载片段 (${downloadedSegmentsCount}/${totalSegments}) - ${formatBytes(downloadedTotalBytes)}`);
+
+              return new Uint8Array(buffer);
+          } catch (error) {
+              console.error(`Error fetching segment ${index + 1}:`, error);
+              // 重新抛出错误，确保如果任何片段下载失败，Promise.all 也拒绝
+              throw error;
+          }
+      });
+
+      updateStatus('loading', `正在下载片段 (0/${totalSegments}) - 0 Bytes`); // 初始显示
+
+      // 等待所有片段下载完成
+      const segmentData = await Promise.all(segmentPromises);
 
       updateStatus('loading', '正在合并视频片段...');
       // 连接所有 ArrayBuffer
