--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="referrer" content="no-referrer"> <!-- 新增：解决部分视频源的防盗链问题 -->
   <title>沉浸式视频播放器</title>
   <!-- 引入外部资源：Font Awesome 和 Inter 字体 -->
-  <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-0-y/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <!-- HLS.js 库 -->
-  <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-0-y/hls.js/8.0.0-beta.3/hls.js"></script>
+  <script src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/hls.js/8.0.0-beta.3/hls.js"></script>
   <!-- xgplayer 和 xgplayer-flv 库 -->
   <link rel="stylesheet" href="https://unpkg.byted-static.com/xgplayer/3.0.21/dist/index.min.css"/>
   <script charset="utf-8" src="https://unpkg.byted-static.com/xgplayer/3.0.21/dist/index.min.js"></script>
@@ -2027,7 +2027,7 @@
 
     // 背景设置
     const defaultBackgroundSettings = {
-      url: 'https://bing.img.run/uhd.php', // 初始默认背景图
+      url: 'https://my.bing.xo.je/302/uhd_302.php', // 初始默认背景图
       blur: 0, // 修改默认模糊度为0
     };
     let backgroundSettings = JSON.parse(localStorage.getItem('backgroundSettings')) || { ...defaultBackgroundSettings };
