--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="referrer" content="no-referrer"> <!-- 新增：解决部分视频源的防盗链问题 -->
   <title>沉浸式视频播放器</title>
   <!-- 引入外部资源：Font Awesome 和 Inter 字体 -->
-  <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <!-- HLS.js 库 -->
-  <script src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/hls.js/8.0.0-beta.3/hls.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/8.0.0-beta.3/hls.js"></script>
   <!-- xgplayer 和 xgplayer-flv 库 -->
   <link rel="stylesheet" href="https://unpkg.byted-static.com/xgplayer/3.0.21/dist/index.min.css"/>
   <script charset="utf-8" src="https://unpkg.byted-static.com/xgplayer/3.0.21/dist/index.min.js"></script>
